Finished footer design and solved horizontal scrolling problem

--- a/fiverr-ui/src/components/footer/Footer.scss
+++ b/fiverr-ui/src/components/footer/Footer.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     color: #999;
-    margin: 50px 0px;
+    margin: 50px 0px 20px 0px;
 
     img{
         width: 24px;
@@ -10,7 +10,7 @@
     }
 
     .container{
-        width: 1300px;
+        width: 1250px;
 
         .top{
             display: flex;
@@ -22,7 +22,7 @@
                 gap: 20px;
 
                 h2{
-                    font-size: 16px;
+                    font-size: 18px;
                     color: #555;
                 }
 
@@ -33,12 +33,42 @@
         }
 
         hr{
-            
+            margin: 30px 0px;
+            height: 0;
+            border: 1px solid rgb(237, 237, 237);
         }
 
         .bottom{
-            .left{}
-            .right{}
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .left{
+                display: flex;
+                align-items: center;
+                gap: 20px;
+
+                span{
+                    font-size: 14px;
+                }
+            }
+            .right{
+                display: flex;
+                align-items: center;
+                gap: 20px;
+
+                .social{
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+                }
+
+                .links{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                }
+            }
         }
     }
 }
