--- a/fiverr-ui/src/components/navbar/Navbar.scss
+++ b/fiverr-ui/src/components/navbar/Navbar.scss
@@ -15,7 +15,7 @@
     }
 
     .container{
-        width: 1300px;
+        width: 1250px;
         display: flex;
         justify-content: space-between;
         padding: 20px 0px;
@@ -84,13 +84,13 @@
     }
     
     hr{
-        width: 100%;
+        width: 1250px;
         height: 0px;
         border: 0.5px solid rgb(229, 229, 229);
     }
 
     .menu{
-        width: 1300px;
+        width: 1250px;
         padding: 10px 0px;
         display: flex;
         justify-content: space-between;
