--- a/fiverr-ui/src/pages/home/Home.scss
+++ b/fiverr-ui/src/pages/home/Home.scss
@@ -41,7 +41,7 @@
         }
 
         .container{
-            width: 1300px;
+            width: 1250px;
             display: flex;
             align-items: center;
             justify-content: center;
